--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,25 +3,22 @@
   "name": "Extension Name",
   "version": "0.1",
   "description": "Some Description",
-  "permissions": [
-  ],
+  "permissions": [],
   "background": {
     "scripts": ["static/js/background.js"]
   },
-  "content_scripts": [{
-    "js": [ "static/js/content.js" ],
-    "matches": [
-      "http://*.example.com/*", "https://*.example.com/*"
-    ]
-  }],
-  "icons": {
-    "192": "logo192.png"
-  },
+  "content_scripts": [
+    {
+      "js": ["static/js/content.js"],
+      "matches": ["<all_urls>"]
+    }
+  ],
+
   "browser_action": {
     "default_icon": {
       "192": "logo192.png"
     },
-    "default_title": "Popup",
+    "default_title": "Amazon Pricedrop",
     "default_popup": "popup.html"
   },
   "options_ui": {
