--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "bootstrap": "^5.0.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-validator": "^6.12.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.2",
+    "nodemon": "^2.0.12",
     "react": "^17.0.2",
     "react-app-rewired": "^2.0",
     "react-bootstrap": "^1.6.1",
