--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "amazon price tracker",
   "version": "0.1",
   "description": "Some Description",
-  "permissions": ["storage"],
+  "permissions": ["storage", "tabs"],
   "background": {
     "scripts": ["static/js/background.js"]
   },
